WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22331
REGRESSION: Contextual menu no longer has an "Inspect Element" item
https://bugs.webkit.org/show_bug.cgi?id=22331
Summary
REGRESSION: Contextual menu no longer has an "Inspect Element" item
Dave Addey
Reported
2008-11-18 00:13:47 PST
In WebKit
r38386
(and earlier), the contextual menu displayed when right-clicking on a loaded web page would include an "Inspect element" item at the bottom of the menu. Selecting this item would open the web inspector with the clicked item highlighted in the inspector. As of
r38492
, this contextual menu item is no longer present. It was very useful - please reinstate it!
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-11-18 10:34:18 PST
How odd.
Mark Rowe (bdash)
Comment 2
2008-11-18 10:34:30 PST
<
rdar://problem/6381657
>
Mark Rowe (bdash)
Comment 3
2008-11-18 16:42:35 PST
I suspect that this was broken by
r38410
(<
http://trac.webkit.org/changeset/38410/trunk/WebKit/mac/WebView/WebUIDelegatePrivate.h
>).
mitz
Comment 4
2008-11-18 16:57:22 PST
Fixed in <
http://trac.webkit.org/changeset/38586
>.
mitz
Comment 5
2008-11-18 23:52:18 PST
(In reply to
comment #4
)
> Fixed in <
http://trac.webkit.org/changeset/38586
>.
and <
http://trac.webkit.org/changeset/38591
>.
Dave Addey
Comment 6
2008-11-19 00:54:42 PST
Yep, that's fixed it for me in
r38591
. Thanks for the quick turnaround - means I can keep using the nightly builds :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug