        Reviewed by Mark Rowe.

- fix https://bugs.webkit.org/show_bug.cgi?id=22331
          <rdar://problem/6381657> REGRESSION: Contextual menu no longer has an "Inspect Element" item

        * WebView/WebUIDelegatePrivate.h: Reorder new enum values after existing
        ones.



Canonical link: https://commits.webkit.org/30795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38586 268f45cc-cd09-0410-ab3c-d52691b4dbfc